# futils

./: CMakeLists.txt  README.md
.github/workflows/: test.yaml
src/: CMakeLists.txt  binning.f90  binning_mod.f90  futils.f90  futils_brent.f90  futils_fastmath.f90  futils_lapack.f90  futils_misc.f90  futils_mrgrnk.f90  futils_rebin.f90  futils_special.f90  futils_spline.f90  rebin.py  specfun.f
tests/: CMakeLists.txt  test_futils.f90
